export type Person = {
  name: string
  prisonNumber: string
  dateOfBirth: string
  ethnicity: string
  gender: string
  religionOrBelief: string
  setting: 'Custody'
  currentPrison: string
}
