export type ProgrammePrerequisite = {
  key: string
  value: string
}
