export type Referral = {
  id: string // eslint-disable-next-line @typescript-eslint/member-ordering
  offeringId: string
  prisonNumber: string
  referrerId: string
}
